# ruix

./: .gitignore  .rust-toolchain.toml  Cargo.toml  Makefile  build.rs  debug.gdb  linker.ld  rust-toolchain.toml  shell.nix
.cargo/: config.toml  i686-unknown-none.json
crates/kernel/: Cargo.toml
crates/kernel/macros/global/: Cargo.toml
crates/kernel/macros/global/src/: lib.rs
crates/kernel/macros/implement/: Cargo.toml
crates/kernel/macros/implement/src/: lib.rs
crates/kernel/macros/interrupts/: Cargo.toml
crates/kernel/macros/interrupts/src/: lib.rs  x86.rs
crates/kernel/src/: cpu.rs  gdt.rs  idt.rs  io.rs  kernel.rs  lib.rs  serial.rs  start.rs  string.rs
crates/kernel/src/boot/: mod.rs  x86.S  x86.rs
crates/kernel/src/boxed/: arr.rs  dyn.rs  vec.rs
crates/kernel/src/fs/: mod.rs
crates/kernel/src/fs/filesystems/fat16/: impl.rs  private.rs
crates/kernel/src/gdt/: mod.rs  tss.rs
crates/kernel/src/heap/: mod.rs
crates/kernel/src/idt/: mod.rs
crates/kernel/src/keyboard/: mod.rs
crates/kernel/src/keyboard/ps2/: mod.rs  scanset_one.rs
crates/kernel/src/loader/elf/: mod.rs  private.rs
crates/kernel/src/paging/: mod.rs  pagedirectory.rs
crates/kernel/src/platform/: mod.rs
crates/kernel/src/platform/x86/: cpu.rs  gdt.rs  mod.rs
crates/kernel/src/platform/x86/boot/: mod.rs
crates/kernel/src/platform/x86/idt/: mod.rs
crates/kernel/src/platform/x86/paging/: mod.rs  pagedirectory.rs
crates/kernel/src/platform/x86/process/: mod.rs
crates/kernel/src/platform/x86/process/task/: mod.rs  tss.rs
crates/kernel/src/platform/x86/syscall/: mod.rs
crates/kernel/src/process/: mod.rs
crates/kernel/src/sync/: global.rs  lock.rs  mod.rs  shared.rs
crates/kernel/src/syscall/: mod.rs
crates/kernel/src/task/: mod.rs
crates/kernel/src/tty/: mod.rs  terminal.rs
crates/std/: Cargo.toml
crates/syscall_macro/: Cargo.toml
crates/syscalls/: Cargo.toml
global/src/: lib.rs
macros/interrupts/: Cargo.toml
macros/syscall/: Cargo.toml
packed/: Cargo.toml
packed/src/: lib.rs
scripts/: debug.sh  paging.sh
shell/: Makefile  linker.ld  shell  shell.h
src/: cpu.rs  disk.rs  gdt.rs  kernel.asm  kernel.rs  lib.rs  main.rs  path.rs  start.rs  string.rs  tty.rs  types.rs
src/boot/: boot.asm
src/boxed/: arr.rs  box.rs  dyn.rs  mod.rs  vec.rs
test/: fs_read.rs  paging.rs  process.rs
(+35 files in other folders)
