[package]
name = "ruix"
version = "0.1.0"
edition = "2021"

[dependencies]
packed = {path = "macros/packed"}
interrupts = {path = "macros/interrupts" }
global = {path = "macros/global"}


[[bin]]
name = "kernel"
path = "src/kernel.rs"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic
opt-level = "s"
split-debuginfo = "false"
lto = "off"

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
opt-level = 2
lto = "off"
