[workspace]
members = ["crates/kernel", "crates/std"]
resolver = "2"

# the profile used for `cargo build`
[profile.dev]
panic = "abort"           # disable stack unwinding on panic
opt-level = 1
split-debuginfo = "false"
lto = "off"

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
opt-level = 2
lto = "off"
